# hyperquark

./: .eslintrc.json  .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  aa.md  asloader.js  build.rs  build.sh  built.ts  clippy.toml  hq-test.project.json  hyperquark.wasm  index.html  index.js  linecount.js  main.js  main.ts  opcodes.mjs  package-lock.json  package.json  rollup-as-loader-lib.js  rollup-as-loader.js  rust-toolchain.toml  rustfmt.toml  shrinkwrap.yaml  style.css  test.as  test.ts  vite.config.js
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-checks.yaml  ci.yaml  deploy.yml
broadcasts/: index.html
broadcasts/assets/: 404-B7EZrR6B.js  404-BJIaDsA8.js  404-BPYNDOZ0.js  404-BVhpeB7o.js  404-BWydbmYO.js  404-ClN2f7YI.js  404-D2H9iy9g.js  404-D9foko7-.js  404-DToglolO.js  404-DdTR3vZv.js  404-GlDSqPw_.js  AboutView-B15TZVnd.js  AboutView-B7UwhQ2h.js  AboutView-B8FtVd9c.js  AboutView-BEJ9y-yq.js  AboutView-BFkVYWvj.js  AboutView-BHvpE8xe.js  AboutView-CEIjZIhw.js  AboutView-ChLdx_Jc.js  AboutView-Cka6OdO7.js  AboutView-Cl41M2uc.js  AboutView-D1MTR-so.js  HomeView-B2JVhhF5.js  HomeView-BCEZxWkI.js  HomeView-BYw5cqtG.js  HomeView-BzOkcDgl.js  HomeView-C0ovQ3RX.js  HomeView-CdpBogj4.js  HomeView-D7nN3yts.js  HomeView-DIUolqXC.js  HomeView-DTseiuyw.js  HomeView-DuJgtFvV.js  HomeView-HPrrc5T1.js  ProjectFileInput-5u3FYfIy.js  ProjectFileInput-B6vxxGTR.js  ProjectFileInput-BPhpiPCx.js  ProjectFileInput-B_djrwNj.js  ProjectFileInput-CqzkunKg.js  ProjectFileInput-D-SWOYrT.js  ProjectFileInput-DP7IErKm.js  (+106 more)
const-folding/: index.html
const-folding/assets/: 404-BJO1kTat.js  404-CFSLYkKm.js  404-CTn1JfoY.js  AboutView-CMwweDU5.js  AboutView-D40Os135.js  AboutView-DF87ICDd.js  HomeView-B6IRhgf1.js  HomeView-BKO_aN3b.js  HomeView-CXlNMsHt.js  ProjectFileInput-5l-uflI_.js  ProjectFileInput-ChTNumiU.js  ProjectFileInput-IxbHqpM2.js  ProjectFileView-BVsHJ6Lq.js  ProjectFileView-CZdoL9rW.js  ProjectFileView-DHd3rrmo.js  ProjectIdView-8IZDuq7j.js  ProjectIdView-DXbem9oY.js  ProjectIdView-v6oNQ-Ue.js  ProjectPlayer-BTVyNnWL.js  ProjectPlayer-CyopLFkz.js  ProjectPlayer-SxGXiLXz.js  Settings-BQMGnf3r.js  Settings-CGUUeTzc.js  Settings-NNvbhKHm.js  empty-WM5V5GFL.js  hyperquark_bg-BN-4JYBS.wasm  hyperquark_bg-BQ8LXtlk.wasm  hyperquark_bg-Bq9oro2D.wasm  hyperquark_bg-CX7SGeoe.wasm  hyperquark_bg-D4QW-2S9.wasm  index-BW1SdHCI.js  index-CDejrpjk.js  index-CN63C1G1.js  scratch-render-DlCm_D2T.js  settings-BFykGGmE.js  settings-Crw1jo1D.js  settings-CtD1JB4X.js
docs/: 404.html  index.html  renderer.js
docs/assets/: AboutView-0f3b2cd7.js  AboutView-2e24ff48.js  AboutView-d2daf76e.js  AboutView-e27ce503.css  AboutView-e31d52c1.js  HomeView-3043da0e.js  HomeView-325f6de7.js  HomeView-7bdf7100.css  HomeView-807213be.js  HomeView-87f1196d.css  HomeView-bb83e5af.js  HomeView-c9811bfc.css  ProjectFileInput-1920f04c.js  ProjectFileInput-6268cc4e.js  ProjectFileInput-c21bb0e7.js  ProjectFileInput-e76868d4.js  ProjectFileView-457330f3.js  ProjectFileView-66222e3c.js  ProjectFileView-6ecf7dc2.js  ProjectFileView-cbf1f42b.js  ProjectIdView-343664cc.js  ProjectIdView-4e336da3.js  ProjectIdView-7d7dd556.js  ProjectIdView-fedc061b.js  ProjectPlayer-35f73f8d.js  ProjectPlayer-366bf7c2.js  ProjectPlayer-8cd8e086.js  ProjectPlayer-c1898132.css  ProjectPlayer-cda5cb42.js  ProjectPlayer-d5ba342f.css  Settings-0efa7adc.css  Settings-3fb77521.js  Settings-f575bc71.js  TestProject-1ae4a66e.js  TestProject-93bff92a.js  TestProject-f18aa6b6.js  TestProject-f396fc6b.js  hyperquark_bg-5494d68b.wasm  hyperquark_bg-d283f4d9.wasm  hyperquark_bg-d46216d6.wasm  (+9 more)
enum-field-getter/: Cargo.toml  README.md
enum-field-getter/src/: lib.rs
human-interaction/: index.html
human-interaction/assets/: 404--Yb6tFic.js  404-3oAWa0PV.js  404-B1B50Are.js  404-B2JYwgkW.js  404-BIReq4PQ.js  404-BRHpyw9s.js  404-BT0FDci8.js  404-B_VNRt6g.js  404-BbeDx6w0.js  404-Bzfk5jkW.js  404-C3QjWGPa.js  404-CHpGg4PE.js  404-CZTFjdMa.js  404-Cbl4Orh_.js  404-Cg_sc4Ur.js  404-Czecd2H2.js  404-D2Omwx4f.js  404-D7d1bnNJ.js  404-DG3_lsMM.js  404-DGraMqlF.js  404-DGuWjo-H.js  404-DJ3zTvxR.js  404-DNLynu-8.js  404-DX1n7vIF.js  404-DcBZX1Fw.js  404-DcpEF8qp.js  404-Dd3-q4FQ.js  404-Dg4veXZt.js  404-DqKQrlS9.js  404-DvRESJV5.js  404-DzIeD4hy.js  404-a2rRnDgp.js  404-ehX3lYCD.js  404-f5J4XNmx.js  404-gJxCAHt_.js  404-n0cXp7Ir.js  404-q2wiU98D.js  AboutView-1dscPGqf.js  AboutView-9nw26lWT.js  AboutView-B4NtMHa_.js  (+512 more)
integration-tests/: index.html
integration-tests/assets/: 404-AqHCGWOv.js  404-B44JEsqU.js  404-Bgq_X7BE.js  404-CCv0CiR_.js  404-CyTJlI0e.js  404-DK-yf0jj.js  (+66 more)
js/: ecma.d.ts  hyperquark.js  hyperquark_bg.js  hyperquark_bg.wasm  imports.ts  opcodes.js  shared.ts
lists/: index.html
look-again/: index.html
main/: index.html
non-warped-procs/: index.html
playground/: App.vue  index.html  main.js
public/: sw.js
render/: index.js
spring-clean-26/: index.html
src/: error.rs  instructions.rs  ir.rs  ir_opt.rs  lib.rs  old-ir.rs  old-wasm.rs  optimisation.rs  rc.rs  registry.rs  sb3.rs  wasm.rs
ssa-v2/: index.html
step-typing-48/: index.html
tmp-20260125/: index.html
v0.0.1/: index.html
v0.0.10/: index.html
v0.0.2/: index.html
v0.0.3/: index.html
v0.0.4/: index.html
v0.0.5/: index.html
v0.0.6/: index.html
v0.0.7/: index.html
v0.0.8/: index.html
v0.0.9/: index.html
vm/: index.js  load.js  vm.ts  worker.js
wasm-gen/: Cargo.toml  README.md
wasmgen/: encoders.js  sections.js  types.js  wasmgen.js
(+1502 files in other folders)
