[package]
name = "hyperquark"
version = "0.0.9"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
enum-field-getter = { path = "enum-field-getter" }
wasm-encoder = "0.245.1"
indexmap = { version = "2.13.0", default-features = false }
hashers = "1.0.1"
uuid = { version = "1.23.0", default-features = false, features = ["v4", "js"] }
regex = "1.12.3"
lazy-regex = "3.6.0"
bitmask-enum = "2.2.5"
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
wasm-bindgen = "0.2.103"
serde-wasm-bindgen = "0.6.5"
wasm-gen = { path = "wasm-gen", version = "0.2.0" }
petgraph = { version = "0.8.1", default-features = false, features = ["stable_graph"] }

[dev-dependencies]
wasmparser = { git = "https://github.com/pufferfish101007/wasm-tools.git", rev = "4e9ffc0" }
wasmprinter = "0.245.1"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
# ezno-checker = { git = "https://github.com/kaleidawave/ezno.git", rev = "96d5058bdbb0cde924be008ca1e5a67fe39f46b9" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
lto = true
opt-level = "z"

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-args=-z stack-size=4194304",
]

[build-dependencies]
convert_case = "0.8.0"

[features]
compiler = [] # if we only want to access flags, we don't want to additionally have all the compiler machinery
panic = [] # if we have DWARF debugging enabled, panicking is more useful than our clunky manual error propagation
default = ["compiler"]
